@@ -1,0 +1,53 @@
+#!/usr/bin/perl
+# This script is a regression test for:
+#
+# https://rt.cpan.org/Ticket/Display.html?id=45997
+#
+# Failure to read the ini file contents from a filehandle made out of a scalar
+
+use Test::More;
+
+use strict;
+use warnings;
+
+use Carp qw(cluck);
+use English qw(-no_match_vars);
+
+use Config::IniFiles;
+
+if ( ! eval { require IO::Scalar; } )
+{
+    plan skip_all => "IO::Scalar is not available";
+}
+else
+{
+    plan tests => 2;
+}
+
+{
+    my $contents = <<'EOF';
+[section1]
+key = val
+EOF
+
+    open my $scalar_fh, "<", \$contents;
+
+    my $conf = eval {
+        $WARNING = 1;
+        $SIG{__WARN__} = \&Carp::croak;
+        Config::IniFiles->new( -file => $scalar_fh);
+    } or warn $EVAL_ERROR;
+
+    # TEST
+    ok(!$EVAL_ERROR, "Object was initialised from filehandle made out of a scalar.");
+
+    # TEST
+    is ($conf->val("section1", "key"), 
+        "val",
+        "Object works."
+    );
+
+    undef $conf;
+    close $scalar_fh;
+}
+
